boreal/tests/assets/invalid_files/compilation/unknown_import.yar
rule a {
    condition: true
}

import "bags"
